Limpieza proyecto y se agrega componente SearchInput.

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,10 @@
-.cardContainer {
-    padding: 10px;
-}
+  .card {
+    margin: 10px;
+    padding: 10px; 
+  }
+  
+  .card img {
+    width: 200px;
+    height: 250px;
+  }
+
