--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,4 @@
-  .button {
+  .card button {
     border: none;
     outline: 0;
     padding: 10px;
@@ -6,9 +6,10 @@
     background-color: #1bcb7f;
     text-align: center;
     cursor: pointer;
-    width: 70%;
+    width: 50%;
     font-size: 15px;
+    border-radius: 10px;
   }
-  .button:hover {
+  .card button:hover {
     opacity: 0.7;
   }
