--- a/src/components/ImageStatus/ImageStatus.css
+++ b/src/components/ImageStatus/ImageStatus.css
@@ -1,5 +1,10 @@
 .image-div {
+    justify-content: center;
+    margin: 50px;
+    text-align:center;
     border-radius: 20px;
     z-index: 1;
     max-width: 200px;
+    max-height: 300px;
+    background-color: white;
 }
